# finance-mcp

./: README.md  main.py  pyproject.toml
src/mcpserver/: __main__.py  finance.py
