[project]
name = "financemcp"
version = "0.1.0"
description = "Finance MCP server providing stock insights like most active, trending, top gainers, top losers, 52-week performance, and market cap categories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
